added developer roadmaps

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<meta charset="utf-8">
 	<meta name="google-site-verification" content="4UUDgPvEqWk8K09YQxOfMJGIkbpT7RvUsmfQu13tZR8" />
-	<meta name="keywords" content="technical club, yes piet, yes tech, yes techie club, YES Techie - A Technical Club, piet technical club, tech clubs, college technical club, student club, student technical club, innovation" />
+	<meta name="keywords" content="technical club, yes piet, yestech, yes techie club, YES Techie - A Technical Club, piet technical club, tech clubs, college technical club, student club, student technical club, innovation" />
 	<link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -233,15 +233,23 @@
 <!-- events  -->
 <section class="events pt-5" id="events" style="background: #000000; margin-top: -21px;">
     <div class="container py-lg-5">
-		<h3 class="heading mb-sm-5 mb-4  text-center" style="color: #fff; ">&gt;_ UPCOMING  <span style="color: #38ff14;">EVENTS</span></h3>
+		<h3 class="heading mb-sm-5 mb-4  text-center" style="color: #fff; ">&gt;_ROAD<span style="color: #38ff14;">MAPS</span></h3>
         <div class="row">
-			<div class="events-grid col-md-3 col-sm-6 mb-5">
+			<div class="events-grid col-md-3 col-sm-6 mb-5" style="border-radius:10px;">
 				<div class="card" style="width: 20.5rem;">
-					  <img class="card-img-top" src="assets/img/event.jpg" alt="Card image cap">
 					  <div class="card-body">
-					    <h5 class="card-title"><center>Smart India Hackathon 2020(Internals)</center></h5><hr />
-					    <center><p class="card-text">Smart India Hackathon 2020 is a nationwide initiative to provide students a platform to solve some of the pressing problems we face in our daily lives.<br /><b>Date : To be announced Soon.</b><br /><b>Venue : PIET College.</b></p></center><center>
-    					<a href="https://www.sih.gov.in/sih2020PS" class="btn btn-banner" target="_blank">Problem Statements</a></center>
+						  <h5 class="card-title"><b>FrontEnd Web Developer</b></h5><hr />
+						  <p class="card-text">Step by step guide to becoming a modern frontend developer in 2019</p>
+    					<a href="https://roadmap.sh/frontend" class="btn btn-banner" target="_blank">Explore</a></center>
+				  </div>
+				</div>
+			</div>
+		<div class="events-grid col-md-3 col-sm-6 mb-5" style="border-radius:10px;">
+				<div class="card" style="width: 20.5rem;">
+					  <div class="card-body">
+						  <h5 class="card-title"><b>BackEnd Web Developer</b></h5><hr />
+						  <p class="card-text">Step by step guide to becoming a modern backend developer in 2019</p>
+    					<a href="https://roadmap.sh/backend" class="btn btn-banner" target="_blank">Explore</a></center>
 				  </div>
 				</div>
 			</div>
@@ -259,7 +267,7 @@
             <div class="container">
                 <div class="row" style="margin-top:20px;">
                     <div class="col-md-6 item text" style="margin-bottom:0px;">
-                        <h3>YES Techie</h3>
+                        <h3>Inspiration</h3>
                         <p style="color: #f0f9ff;">“Constantly think about how you could be doing things better and keep questioning yourself!”<br /><span style="color: #38ff14">― Elon Musk</span></p>
                     </div>
                     <div class="col-sm-6 col-md-3 item">
@@ -274,7 +282,7 @@
                         <h3>Contact Us</h3>
                         <ul>
                             <li><a href="https://www.piet.co.in" target="_blank"><i class="fas fa-map-marker icon fa">&nbsp;&nbsp;Panipat Institute of Engineering and Technology (HR) - 132102</a></i></li>
-                            <li><a href="mailto:ranjeet@yestechie.team"><i class="fa far fa-envelope socialIcons">&nbsp;&nbsp;support@yestechie.events</a></i></li>
+                            <li><a href="mailto:ranjeet@yestechie.team"><i class="fa far fa-envelope socialIcons">&nbsp;&nbsp;support@yestechie.team</a></i></li>
                         </ul>
                     </div>
                 </div>
