--- a/index.html
+++ b/index.html
@@ -231,31 +231,31 @@
 <!-- //stats section -->
 
 <!-- events  -->
-<section class="events pt-5" id="events" style="background: #000000; margin-top: -21px;">
-    <div class="container py-lg-5">
-		<h3 class="heading mb-sm-5 mb-4  text-center" style="color: #fff; ">&gt;_ROAD<span style="color: #38ff14;">MAPS</span></h3>
-        <div class="row">
-			<div class="events-grid col-md-3 col-sm-6 mb-5" style="border-radius:10px;">
-				<div class="card" style="width: 20.5rem;">
-					  <div class="card-body">
-						  <h5 class="card-title"><b>FrontEnd Web Developer</b></h5><hr />
-						  <p class="card-text">Step by step guide to becoming a modern frontend developer in 2019</p>
-    					<a href="https://roadmap.sh/frontend" class="btn btn-banner" target="_blank">Explore</a></center>
-				  </div>
-				</div>
-			</div>
-		<div class="events-grid col-md-3 col-sm-6 mb-5" style="border-radius:10px;">
-				<div class="card" style="width: 20.5rem;">
-					  <div class="card-body">
-						  <h5 class="card-title"><b>BackEnd Web Developer</b></h5><hr />
-						  <p class="card-text">Step by step guide to becoming a modern backend developer in 2019</p>
-    					<a href="https://roadmap.sh/backend" class="btn btn-banner" target="_blank">Explore</a></center>
-				  </div>
-				</div>
-			</div>
-	        </div>
-    </div>
-</section><br />
+<div class="features-boxed" id="projects" style="background: #000000; margin-top: -21px;">
+        <div class="container">
+            <div class="intro">
+                <h2 class="text-center" style="color: #fff;">&gt;_ DEVELOPER<span style="color: #38ff14;">ROADMAPS</span></h2>
+                <p class="text-center">Step by step guides and paths to learn different tools or technologies</p>
+            </div>
+            <div class="row justify-content-center features">
+                <div class="col-sm-6 col-md-5 col-lg-4 item">
+                    <div class="box">
+                        <h3 class="name">FrontEnd Web Developer</h3>
+                        <p class="description">Step by step guide to becoming a modern frontend developer in 2019</p><a class="learn-more btn-banner" href="https://roadmap.sh/frontend" target="_blank">Explore</a></div>
+                </div>
+                <div class="col-sm-6 col-md-5 col-lg-4 item">
+                    <div class="box">
+                        <h3 class="name">BackEnd Web Developer</h3>
+                        <p class="description">Step by step guide to becoming a modern frontend developer in 2019</p><a class="learn-more btn-banner" href="https://roadmap.sh/backend" target="_blank">Explore</a></div>
+                </div>
+                <div class="col-sm-6 col-md-5 col-lg-4 item">
+                    <div class="box">
+                        <h3 class="name">DevOps Engineer</h3>
+                        <p class="description">Step by step guide to become an SRE or for any operations role in 2019</p><a class="learn-more btn-banner" href="devops" target="_blank">Explore</a></div>
+                </div>
+            </div>
+        </div>
+    </div><br />
 <!-- //events -->
 
 <!-- copyright -->
