--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<ul class="menu ml-auto mt-1">
 				<li class=""><a href="#about">   &gt;_ <span style="color: #38ff14;">About</span></a></li>
 				<li class="active"><a href="#projects">  &gt;_ <span style="color: #38ff14;">Projects</span></a></li>
-				<li class=""><a href="#events">   &gt;_ <span style="color: #38ff14;">Events</span></a></li>
+				<li class=""><a href="#roadmaps">   &gt;_ <span style="color: #38ff14;">Events</span></a></li>
 				<li class=""><a href="#">   &gt;_ <span style="color: #38ff14;">Hall of Fame</a></span></li>
 				<li class=""><a href="#footer">   &gt;_ <span style="color: #38ff14;">Contact Us</span></a></li>
 			</ul>
@@ -231,10 +231,10 @@
 <!-- //stats section -->
 
 <!-- events  -->
-<div class="features-boxed" id="projects" style="background: #000000; margin-top: -21px;">
+<div class="features-boxed" id="roadmaps" style="background: #000000; margin-top: -21px;">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center" style="color: #fff;">&gt;_ DEVELOPER<span style="color: #38ff14;">ROADMAPS</span></h2>
+                <h2 class="text-center" style="color: #fff;">&gt;_ DEVELOPER<span style="color: #38ff14;"> ROADMAPS</span></h2>
                 <p class="text-center">Step by step guides and paths to learn different tools or technologies</p>
             </div>
             <div class="row justify-content-center features">
