--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <div class="col-sm-6 col-md-3 item">
                         <h3>Contact Us</h3>
                         <ul>
-                            <li><a href="https://www.piet.co.in" target="_blank"><i class="fas fa-map-marker icon fa">&nbsp;&nbsp;Panipat Institute of Engineering and Technology (HR) - 132102</a></i></li>
+                            <li><a href="https://www.piet.co.in" target="_blank"><i class="fas fa-map-marker icon fa" style="text-align: justify; line-height: 20px;">&nbsp;Panipat Institute of Engineering and Technology, Samalkha, Panipat, Haryana - 132102</a></i></li>
                             <li><a href="mailto:ranjeet@yestechie.team"><i class="fa far fa-envelope socialIcons">&nbsp;&nbsp;support@yestechie.team</a></i></li>
                         </ul>
                     </div>
